Correctly aligned in mobile version

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -220,6 +220,9 @@ $breakpoint: 576px;
   .introP p {
     font-size: 1.2rem;
   }
+  .abtbtn {
+    margin-left: 14vw;
+  }
 }
 
 
